create github pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -170,7 +170,7 @@
                 </div>
             </div>
             <div class="mbr-figure" style="width: 105%;">
-                    <img src="assets/images/background8.jpg" alt="Mobirise">
+                    <img src="assets/images/barber-4618697-1920-1042x695.jpg" alt="Mobirise" title="">
             </div>
         </div>
     </div>
