--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio web templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -209,8 +209,8 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Busca</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Se te mostrarán todas los servicios disponibles</p>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Elige</h4>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Se te mostrarán todas los servicios disponibles, de entre todas ellas elige la que más se adecue a tus necesidades</p>
                     </div>
                 </div>
             </div>
@@ -223,8 +223,8 @@
                         </h3>
                     </div>          
                     <div class="step-text-content align-center">
-                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Elige</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Elige de entre todas las opciones la que más te guste</p>
+                        <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Disfruta</h4>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Disfruta de una experiencia única con un servicio personalizado sin salir de casa y recompensa su servicio</p>
                     </div>
                 </div>
             </div>
@@ -252,7 +252,7 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
-            <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-warning">BARBERO</a></h2>
+            <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-info">BARBERO</a></h2>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">
             Duplica tus ingresos haciendo lo que te gusta</h3>
         <div class="step-container row justify-content-center">
