create github pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -126,7 +126,7 @@
                             </div>
                             <div id="collapse1_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7"><strong>HomelyBarber</strong> es una comunidad de free barberos que realizan servicios de barbería a domicilio. Nuestro objetivo es que cualquier persona pueda disfrutar de este tipo de servicios.<br><br>La comunidad de HomelyBarber está formada por "<strong>barberos</strong>" que son personas abiertas, atentas, dicertidas, con gran conocimento de los servicios de barbería y que harán de el corte de pelo una experiencia única.<br><br>Y su "<strong>homelier</strong>" son las personas que están en casa esperando a que el barbero elegido le haga disfrutar de una experiencia inolvidable.</p>
+                                    <p class="mbr-fonts-style panel-text display-7"><strong>HomelyBarber</strong> es una comunidad de free barberos que realizan servicios de barbería a domicilio. Nuestro objetivo es que cualquier persona pueda disfrutar de este tipo de servicios.<br><br>La comunidad de HomelyBarber está formada por "<strong>barberos</strong>" que son personas abiertas, atentas, divertidas, con gran conocimento de los servicios de barbería y que harán de el corte de pelo una experiencia única.<br><br>Y su "<strong>homelier</strong>" son las personas que están en casa esperando a que el barbero elegido le haga disfrutar de una experiencia inolvidable.</p>
                                 </div>
                             </div>
                         </div>
@@ -142,7 +142,7 @@
                             </div>
                             <div id="collapse2_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">Un "Barbero Free" no es más que un barbero que realiza servicios de barbería de manera libre a domicilio. Este tipo de servicios se está poniendo de moda debido al revolucionario trato con el homelier y la curiosa manera de pago.<br><br>El concepto es un poco confuso ya que "free" significa "gratis en inglés pero también "<strong>libre</strong>". En este caso, quiere decir "<strong>Barbero de libre pago</strong>", es decir, que el homelier decide cuánto le da al barbero al final del servicio en función de su satisfación. Es un modelo conocido como "taquilla inversa" que empodra el cliente y mejora el servicio que ofrece.<br><br>Nuestra intención es que se entienda bien el concepto y recompensen justamente a los barberos, para que podamos disfrutar de estos servicios de manera única.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">Un "<strong>Barbero Free</strong>" no es más que un barbero que realiza servicios de barbería de <strong>manera libre</strong> a domicilio. Este tipo de servicios se está poniendo de moda debido al revolucionario trato con el homelier y la curiosa manera de pago.<br><br>El concepto es un poco confuso ya que "free" significa "gratis" en inglés pero también "<strong>libre</strong>". En este caso, quiere decir "<strong>Barbero de libre pago</strong>", es decir, que el homelier decide cuánto le da al barbero al final del servicio en función de su satisfación. Es un modelo conocido como "taquilla inversa" que empodra el cliente y mejora el servicio que ofrece.<br><br>Nuestra intención es que se entienda bien el concepto y recompensen justamente a los barberos, para que podamos disfrutar de estos servicios de manera única.</p>
                                 </div>
                             </div>
                         </div>
@@ -157,7 +157,7 @@
                             </div>
                             <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">La pregunta que nos hacen todos los homeliers. La cantidad la eliges tú y aconsehamos que se haga en base al servicio realizado o a las posibilidades económicas de cada uno.<br><br>Los barberos son profesionales que se están formando a diario, intentnado mejorar sus técnicas como sus tipos de servicio.<br><br>Esa es la razón por la que los homeliers suelen aportar entre 15 o 30€ por persona. Pero puedes elegir si das más o menos en función del servicio recibido.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">La pregunta que nos hacen todos los homeliers. La cantidad la eliges tú y aconsejamos que se haga en base al servicio realizado o a las posibilidades económicas de cada uno.<br><br>Los barberos son profesionales que se están formando a diario, intentando mejorar sus técnicas como sus tipos de servicio.<br><br>Esa es la razón por la que los homeliers suelen aportar entre 15 o 50€ por persona. Pero puedes elegir si das más o menos en función del servicio recibido.</p>
                                 </div>
                             </div>
                         </div>
