create github pages

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -157,7 +157,7 @@
                             </div>
                             <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body p-4">
-                                    <p class="mbr-fonts-style panel-text display-7">La pregunta que nos hacen todos los homeliers. La cantidad la eliges tú y aconsejamos que se haga en base al servicio realizado o a las posibilidades económicas de cada uno.<br><br>Los barberos son profesionales que se están formando a diario, intentando mejorar sus técnicas como sus tipos de servicio.<br><br>Esa es la razón por la que los homeliers suelen aportar entre 15 o 50€ por persona. Pero puedes elegir si das más o menos en función del servicio recibido.</p>
+                                    <p class="mbr-fonts-style panel-text display-7">La pregunta que nos hacen todos los homeliers. La cantidad la eliges tú y aconsejamos que se haga en base al servicio realizado o a las posibilidades económicas de cada uno.<br><br>Los barberos son profesionales que se están formando a diario, intentando mejorar sus técnicas como sus tipos de servicio.<br><br>Esa es la razón por la que los homeliers suelen aportar entre 15 o 40€ por persona. Pero puedes elegir si das más o menos en función del servicio recibido.</p>
                                 </div>
                             </div>
                         </div>
