--- a/index.html
+++ b/index.html
@@ -73,14 +73,13 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>
-                    QUIERO UN SERVICIO</a> <a class="btn btn-sm btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a> <a class="btn btn-sm btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                     SOY BARBERO</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -92,7 +91,7 @@
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-2">BARBERO FREE A DOMICILIO</h1>
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Elige tu barbero FREE a domicilio de una manera rápida y sencilla<br>Sé responsable #QUÉDATEENCASA</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank">QUIERO UN SERVICIO</a>
+                <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank">VER SERVICIOS</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank">SOY BARBERO</a></div>
             </div>
         </div>
@@ -210,7 +209,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Elige</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Se te mostrarán todas los servicios disponibles, de entre todas ellas elige la que más se adecue a tus necesidades</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Se te mostrarán todos los servicios disponibles, de entre todos ellos elige el que más se adecue a tus necesidades</p>
                     </div>
                 </div>
             </div>
@@ -265,7 +264,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Registro</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Resgístrate de una manera sencilla estableciendo tus horarios, servicios y zona de servicio</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Resgístrate de una manera sencilla estableciendo tus horarios, servicios y ciudad de servicio</p>
                     </div>
                 </div>
             </div>
@@ -293,7 +292,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Recompensa</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">En función de la satisfación del cliente recibe la cantidad de dinero merecida</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">En función de la satisfación del cliente recibe la recompensa merecida</p>
                     </div>
                 </div>
             </div>
@@ -330,7 +329,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white">Darme de alta como Homelier</a></h5>
+                    <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white">V</a>ER SERVICIOS</h5>
                 <p class="mbr-text"></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
@@ -341,7 +340,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-white">Darme de alta como Barbero</a></h5>
+                    <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-white">S</a>OY BARBERO</h5>
                 <p class="mbr-text"></p>
             </div>
         </div>
