create github pages

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -184,7 +184,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
             <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white">HOMELIER</a></h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Elige tu servicio de manera rápida y sencilla</h3>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Elige el servicio que mejor se adapte a ti</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
                 <div class="step-element">
@@ -195,7 +195,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Registro</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Regístrate de manera sencilla y rápida</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Regístrate de manera rápida y sencilla</p>
                     </div>
                 </div>
             </div>
@@ -264,7 +264,7 @@
                     </div>          
                     <div class="step-text-content align-center">
                         <h4 class="mbr-step-title pb-3 mbr-fonts-style display-5">Registro</h4>
-                        <p class="mbr-step-text mbr-fonts-style display-7">Resgístrate de una manera sencilla estableciendo tus horarios, servicios y ciudad de servicio</p>
+                        <p class="mbr-step-text mbr-fonts-style display-7">Resgístrate estableciendo tus horarios, servicios y ciudad de trabajo</p>
                     </div>
                 </div>
             </div>
