create github pages

--- a/page1.html
+++ b/page1.html
@@ -78,7 +78,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free website maker</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
+<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
 
     
 
