create github pages

--- a/page1.html
+++ b/page1.html
@@ -72,13 +72,15 @@
                     <a class="nav-link link text-white display-4" href="https://mobirise.co">
                         </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a> <a class="btn btn-sm btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a> 
+              <a class="typeform-share button display-4" href="https://homelybarber.typeform.com/to/ngnT53" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#267DDD;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" target="_blank">¡Pruébame! </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+              <a class="btn btn-sm btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                     SOY BARBERO</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">web design templates</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
 
     
 
