create github pages

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 </li></ul>
             <div class="navbar-buttons mbr-section-btn">
               <a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a>
-              <a class="btn btn-sm btn-primary display-4" href="https://homelybarber.typeform.com/to/ERRjRY" data-mode="popup" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
+              <a class="btn btn-sm btn-primary typeform-share button display-4" href="https://homelybarber.typeform.com/to/ERRjRY" data-mode="popup" target="_blank"><span class="mbri-smile-face mbr-iconfont mbr-iconfont-btn"></span>VER SERVICIOS</a><script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
               <a class="btn btn-sm btn-white-outline display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank"><span class="mbri-user mbr-iconfont mbr-iconfont-btn"></span>
                     SOY BARBERO</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
