create github pages

--- a/page1.html
+++ b/page1.html
@@ -80,7 +80,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
+<section class="engine"><a href="https://mobirise.info/b">create your own website</a></section><section class="cid-rUr57R5N42 mbr-fullscreen mbr-parallax-background" id="header2-b">
 
     
 
