create github pages

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -97,6 +97,7 @@
                 
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">Elige tu barbero FREE a domicilio de una manera rápida y sencilla<br>Sé responsable #QUÉDATEENCASA</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary typeform-share button display-4" href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank">VER SERVICIOS</a>
+                  <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                     <a class="btn btn-md btn-white-outline typeform-share button display-4" href="https://homelybarber.typeform.com/to/ngnT53" target="_blank">SOY BARBERO</a></div>
             </div>
         </div>
@@ -189,6 +190,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
             <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white typeform-share button">HOMELIER</a></h2>
+      <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">Elige el servicio que mejor se adapte a ti</h3>
         <div class="step-container row justify-content-center">
             <div class="card col-12 col-md-4 separline">
@@ -257,6 +259,7 @@
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-2">
             <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-info typeform-share button">BARBERO</a></h2>
+      <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
         <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5">
             Duplica tus ingresos haciendo lo que te gusta</h3>
         <div class="step-container row justify-content-center">
@@ -335,6 +338,7 @@
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
                     <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white typeform-share button">V</a>ER SERVICIOS</h5>
+              <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 <p class="mbr-text"></p>
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
