create github pages

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="cid-rUbzzMDMqY mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -337,7 +337,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white typeform-share button">V</a>ER SERVICIOS</h5>
+                    <a href="https://homelybarber.typeform.com/to/ERRjRY" target="_blank" class="text-white typeform-share button">VER SERVICIOS</a></h5>
               <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
                 <p class="mbr-text"></p>
             </div>
@@ -349,7 +349,7 @@
             </div>
             <div class="col-12 col-md-3 mbr-fonts-style display-7">
                 <h5 class="pb-3">
-                    <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-white typeform-share button">S</a>OY BARBERO</h5>
+                    <a href="https://homelybarber.typeform.com/to/ngnT53" target="_blank" class="text-white typeform-share button">SOY BARBERO</a></h5>
                 <p class="mbr-text"></p>
             </div>
         </div>
